# plot

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  braille.hpp  build.py  color.hpp  colors.hpp  install_deps.sh  layout.hpp  plot.hpp  point.hpp  real_canvas.hpp  rect.hpp  string_view.hpp  terminal.hpp  terminal_canvas.hpp  utils.hpp
examples/: CMakeLists.txt  Makefile  animation.cpp  border.cpp  boxes.cpp  canvas.cpp  frame.cpp  iterators.hpp  make_xterm_table.cpp  multi.cpp  opengl_colors.hpp  real_canvas.cpp  terminal.cpp  x11_colors.hpp
include/: braille.hpp  color.hpp  layout.hpp  point.hpp  rect.hpp  string_view.hpp  terminal.hpp  unicode.hpp  unicode_data.hpp  unicode_structs.hpp  utils.hpp
projects/: CMakeLists.txt  plot.cbp
scripts/: Makefile  pack.py  unicode.py  unicode_data_template.hpp
test/: animation.cpp  border.cpp  canvas.cpp  multi.cpp
